@@ -136,7 +136,7 @@
                         label: "Duration",
                         formatter: function (value) {
 
-                            return value/3600;
+                            return value/3600 + ' h';
 
                         }
                     },
